@@ -43,6 +43,8 @@
 
 #include "utils.h"
 
+#define PROGRAM_NAME "rzxdump"
+
 char *progname;
 
 const char *rzx_signature = "RZX!";
@@ -87,7 +89,7 @@ static void
 show_version( void )
 {
   printf(
-    "rzxdump (" PACKAGE ") " PACKAGE_VERSION "\n"
+    PROGRAM_NAME " (" PACKAGE ") " PACKAGE_VERSION "\n"
     "Copyright (c) 2002-2014 Philip Kendall\n"
     "License GPLv2+: GNU GPL version 2 or later "
     "<http://gnu.org/licenses/gpl.html>\n"
@@ -99,16 +101,18 @@ static void
 show_help( void )
 {
   printf(
-    "Usage: rzxdump [OPTION] <rzxfile>...\n"
+    "Usage: %s [OPTION] <rzxfile>...\n"
     "List contents of Sinclair ZX Spectrum input recording files.\n"
     "\n"
     "Options:\n"
     "  -h, --help     Display this help and exit.\n"
     "  -V, --version  Output version information and exit.\n"
     "\n"
-    "Report rzxdump bugs to <" PACKAGE_BUGREPORT ">\n"
-    "fuse-utils home page: <" PACKAGE_URL ">\n"
-    "For complete documentation, see the manual page of rzxdump.\n"
+    "Report %s bugs to <%s>\n"
+    "%s home page: <%s>\n"
+    "For complete documentation, see the manual page of %s.\n",
+    progname,
+    PROGRAM_NAME, PACKAGE_BUGREPORT, PACKAGE_NAME, PACKAGE_URL, PROGRAM_NAME
   );
 }
 
@@ -153,13 +157,13 @@ int main( int argc, char **argv )
   argv += optind;
 
   if( error ) {
-    fprintf( stderr, "Try `rzxdump --help' for more information.\n" );
+    fprintf( stderr, "Try `%s --help' for more information.\n", progname );
     return error;
   }
 
   if( argc < 1 ) {
     fprintf( stderr, "%s: Usage: %s <rzx file(s)>\n", progname, progname );
-    fprintf( stderr, "Try `rzxdump --help' for more information.\n" );
+    fprintf( stderr, "Try `%s --help' for more information.\n", progname );
     return 1;
   }
 
