@@ -37,6 +37,8 @@
 
 #include "utils.h"
 
+#define PROGRAM_NAME "rzxtool"
+
 const char *progname;
 static libspectrum_creator *creator;
 
@@ -326,7 +328,7 @@ static void
 show_version( void )
 {
   printf(
-    "rzxtool (" PACKAGE ") " PACKAGE_VERSION "\n"
+    PROGRAM_NAME " (" PACKAGE ") " PACKAGE_VERSION "\n"
     "Copyright (c) 2007-2014 Philip Kendall\n"
     "License GPLv2+: GNU GPL version 2 or later "
     "<http://gnu.org/licenses/gpl.html>\n"
@@ -338,7 +340,7 @@ static void
 show_help( void )
 {
   printf(
-    "Usage: rzxtool [OPTION]... <rzxfile> [<outfile>]\n"
+    "Usage: %s [OPTION]... <rzxfile> [<outfile>]\n"
     "Modify Sinclair ZX Spectrum input recording files.\n"
     "\n"
     "Options:\n"
@@ -354,9 +356,11 @@ show_help( void )
     "  -h, --help     Display this help and exit.\n"
     "  -V, --version  Output version information and exit.\n"
     "\n"
-    "Report rzxtool bugs to <" PACKAGE_BUGREPORT ">\n"
-    "fuse-utils home page: <" PACKAGE_URL ">\n"
-    "For complete documentation, see the manual page of rzxtool.\n"
+    "Report %s bugs to <%s>\n"
+    "%s home page: <%s>\n"
+    "For complete documentation, see the manual page of %s.\n",
+    progname,
+    PROGRAM_NAME, PACKAGE_BUGREPORT, PACKAGE_NAME, PACKAGE_URL, PROGRAM_NAME
   );  
 }
 
@@ -479,7 +483,7 @@ main( int argc, char *argv[] )
 
   error = parse_options( argc, argv, &actions, &options );
   if( error ) {
-    fprintf( stderr, "Try `rzxtool --help' for more information.\n" );
+    fprintf( stderr, "Try `%s --help' for more information.\n", progname );
     return error;
   }
 
